Define JS Function returning a string

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <p>
@@ -14,5 +14,7 @@
       quaerat? Aperiam quasi aspernatur doloribus explicabo, eveniet id nihil
       esse, autem sit aliquam ullam quam in perferendis impedit qui distinctio.
     </p>
+
+    <script src="script.js"></script>
   </body>
 </html>
